
                CHANGES IN party VERSION 0.9-9992 (2010-02-26)

    o    Bug fix in mob plotting for anova models


                CHANGES IN party VERSION 0.9-9991 (2010-01-27)

    o    Bug fix in error handling of mob().

                CHANGES IN party VERSION 0.9-999 (2009-09-24)

    o    minbucket was erronously interpreted as minbucket + 1

    o    p-values for teststat = "max" were wrong
         in the uncommon case of zero variances


                CHANGES IN party VERSION 0.9-998 (2009-06-17)

    o    mtry may vary with tree depth

    o    finding surrogate variables may have failed, fixed.


                CHANGES IN party VERSION 0.9-997 (2009-06-04)

    o    documentation fixes


                CHANGES IN party VERSION 0.9-996 (2009-03-27)

    o    survival fixes


                CHANGES IN party VERSION 0.9-994 (2009-02-10)

    o    fix bug in new varimp function (which was triggered
         by splits in categorical variables)


                CHANGES IN party VERSION 0.9-993 (2009-01-29)

    o    new C-level function R_remove_weights


                CHANGES IN party VERSION 0.9-992 (2009-01-19)

    o   update CITATION file


                CHANGES IN party VERSION 0.9-991 (2009-01-13)

    o   new conditional variable importance measure 
        (Strobl et al., 2008, BMC Bioinformatics) available.


                CHANGES IN party VERSION 0.9-99 (2008-10-28)

    o   a suboptimal split was implemented when the best
        split corresponded to the last row of <data> due to
        a coding error. This should have happend only very
        rarely, however, the glaucoma example is affected.


                CHANGES IN party VERSION 0.9-98 (2008-10-15)

    o   don't compute ordering of censored variables (thanks to
        Brian D. Ripley for the report)

    o   experimental version of partialPlot for cforests

    o   teststat = "quad" and testtype = "Univariate" produced